--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: My Personal Blog
 author: Javier Ruiz Vázquez
 email: java.rv87@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  This is a first part of my personal blog where you will learn about angular, javascript, firebase and google cloud platform
+  This is a first part of my personal blog where you will learn about angular, javascript, firebase and google cloud platform and more
 
 # social links
 twitter_username: @_javaruiz
